--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="row">
             <div class="col-md-6 mx-auto text-center bg-primary mt-5 p-5 rounded">
                 <h1 id="w-location"></h1>
+                <img id="w-flag">
                 <h3 class="text-dark" id="w-desc"></h3>
                 <h3 id="w-string"></h3>
                 <img id="w-icon">
